--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,41 @@
     padding: 0;
 }
 
+body {
+    font-family: 'Raleway', sans-serif;
+    font-size: 1rem;
+    line-height: 1.8rem;
+    color: #666;
+}
+
 a {
     text-decoration: none;
+}
+
+h1 {
+    color: #007700;
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 3rem;
+}
+
+h2 {
+    color: #007700;
+    font-size: 1.7rem;
+    font-weight: 700;
+    line-height: 2.7rem;
+}
+
+h3 {
+    color: #007700;
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 2.5rem;
+}
+
+h4 {
+    color: #007700;
+    font-size: 1.3rem;
+    font-weight: 600;
+    line-height: 2.3rem;
 }
