Cambios de diseño

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<header class="shadow"><app-header></app-header></header>
-<main><router-outlet></router-outlet></main>
-<footer class="border-top fixed-bottom"><app-footer></app-footer></footer>
+<header class="shadow sticky-top">
+    <app-header></app-header>
+</header>
+<main class="container mt-5">
+    <router-outlet></router-outlet>
+</main>
+<footer class="border-top fixed-bottom">
+    <app-footer></app-footer>
+</footer>
