--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,17 +1,19 @@
 <div class="container">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" [routerLink]="'/inicio'">AppTeacher</a>
+            <a class="navbar-brand" [routerLink]="'/home'">AppTeacher</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" [routerLink]="['/inicio']">Inicio</a>
-                    <a class="nav-link" href="#">Registro</a>
-                    <a class="btn btn-outline-success" href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16"
-                            height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                <div class="navbar-nav ms-auto">
+                    <a class="nav-link" aria-current="page" routerLinkActive="active"
+                        [routerLink]="['/home']">Inicio</a>
+                    <a class="nav-link" routerLinkActive="active" [routerLink]="['']">Registro</a>
+                    <a class="btn btn-outline-success" routerLinkActive="active" [routerLink]="['']"><svg
+                            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-person-fill" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
                         </svg>Acceso Usuarios</a>
                     <a class="nav-link disabled" aria-disabled="true">Disabled</a>
