--- a/src/app/components/home/profesor-list/profesor-list.component.html
+++ b/src/app/components/home/profesor-list/profesor-list.component.html
@@ -1,1 +1,6 @@
-<p>profesor-list works!</p>
+<h2 class="title">Listado de profesores</h2>
+<section class="row">
+    <article class="col-12 col-md-6 col-xl-3 mb-4" *ngFor="let profesor of profesores">
+        <app-profesor-card [profesor]="profesor"></app-profesor-card>
+    </article>
+</section>
