--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<header class="shadow sticky-top">
+<header class="shadow sticky-top bg-white">
     <app-header></app-header>
 </header>
-<main class="container mt-5">
+<main class="container mt-5 mb-5">
     <router-outlet></router-outlet>
 </main>
 <footer class="border-top fixed-bottom">
