--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway', sans-serif !important;
     font-size: 1rem;
     line-height: 1.8rem;
     color: #666;
@@ -44,4 +44,13 @@ h4 {
     font-size: 1.3rem;
     font-weight: 600;
     line-height: 2.3rem;
+}
+
+.title {
+    color: #007700;
+    text-align: center;
+    font-size: 2.2rem;
+    font-weight: 700;
+    line-height: 2.8rem;
+    margin-bottom: 2rem;
 }
