Quitar la petición de datos a la base de datos del componente home

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,2 @@
-<app-mapa [profesores]="profesoresPublic"></app-mapa>
-<app-profesor-list [profesores]="profesoresPublic"></app-profesor-list>
+<!--<app-mapa [profesores]="profesoresPublic"></app-mapa> -->
+<app-profesor-list></app-profesor-list>
