--- a/src/app/components/home/profesor-card/profesor-card.component.html
+++ b/src/app/components/home/profesor-card/profesor-card.component.html
@@ -6,5 +6,10 @@
         </p>
         <p class="card-text"><span class="fw-bold">Experiencia:</span> {{profesor?.experiencia}}</p>
         <p class="card-text"><span class="fw-bold">Precio:</span> {{profesor?.precio}}</p>
+        <p class="card-text"><span class="fw-bold">Asignaturas:</span></p>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item" *ngFor="let asignatura of profesor.asignaturas">{{asignatura.nombre}}
+            </li>
+        </ul>
     </div>
 </div>
