Desarrollo de login, instalación de jwt-decode para decodificar token y redireccionamiento en registro a login

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,13 +4,13 @@
         <div class="row mb-3">
             <label for="email" class="col-sm-3 col-form-label">Email</label>
             <div class="col-sm-9">
-                <input type="email" class="form-control" id="email">
+                <input type="email" class="form-control" id="email" name="email" ngModel>
             </div>
         </div>
         <div class="row mb-3">
             <label for="password" class="col-sm-3 col-form-label">Contraseña</label>
             <div class="col-sm-9">
-                <input type="password" class="form-control" id="password">
+                <input type="password" class="form-control" id="password" name="password" ngModel>
             </div>
         </div>
         <div class="d-grid gap-2">
