--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,13 +10,20 @@
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link" aria-current="page" routerLinkActive="active"
                         [routerLink]="['/home']">Inicio</a>
-                    <a class="nav-link" routerLinkActive="active" [routerLink]="['/registro']">Registro</a>
-                    <a class="btn btn-outline-success" routerLinkActive="active" [routerLink]="['/login']"><svg
+                    <a *ngIf="logado" class="nav-link" routerLinkActive="active"
+                        [routerLink]="['/dashboard/admin']">Administradores</a>
+                    <a *ngIf="!logado" class="nav-link" routerLinkActive="active"
+                        [routerLink]="['/registro']">Registro</a>
+                    <a *ngIf="!logado" class="btn btn-outline-success" routerLinkActive="active"
+                        [routerLink]="['/login']"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                            fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
+                        </svg> Acceso Usuarios</a>
+                    <a *ngIf="logado" class="btn btn-outline-success" (click)="logout()"><svg
                             xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-person-fill" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
-                        </svg> Acceso Usuarios</a>
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                        </svg> Logout</a>
                 </div>
             </div>
         </div>
