--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
                 <div class="navbar-nav ms-auto">
                     <a class="nav-link" aria-current="page" routerLinkActive="active"
                         [routerLink]="['/home']">Inicio</a>
-                    <a *ngIf="logado" class="nav-link" routerLinkActive="active"
+                    <a *ngIf="rolAdmin" class="nav-link" routerLinkActive="active"
                         [routerLink]="['/dashboard/admin']">Administradores</a>
                     <a *ngIf="!logado" class="nav-link" routerLinkActive="active"
                         [routerLink]="['/registro']">Registro</a>
