--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -53,4 +55,30 @@ h4 {
     font-weight: 700;
     line-height: 2.8rem;
     margin-bottom: 2rem;
+}
+
+/* bi tamaño de los iconos*/
+.bi {
+    font-size: 2rem;
+}
+
+.list,
+.list-boton {
+    align-self: center;
+    padding: 10px;
+    flex-basis: 100%;
+    flex-shrink: 1;
+}
+
+.activado {
+    color: #007700;
+}
+
+.desactivado {
+    color: #aaa;
+}
+
+.boton-icono {
+    border: none;
+    background: none;
 }
