Eliminamos las busquedas del componente del listado y cargamos los profesores recibidos del componente home. Cambios en profesor card y en gitignore

--- a/src/app/components/home/profesor-card/profesor-card.component.html
+++ b/src/app/components/home/profesor-card/profesor-card.component.html
@@ -4,6 +4,7 @@
         <h4 class="card-title">{{profesor?.nombre}} {{profesor?.apellidos}}</h4>
         <p class="card-text"><i class="fa-solid fa-location-dot"></i> <span class="fw-bold">{{profesor?.ciudad}}</span>
         </p>
+        <p class="card-text"><span class="fw-bold">Email:</span> {{profesor?.email}}</p>
         <p class="card-text"><span class="fw-bold">Experiencia:</span> {{profesor?.experiencia}}</p>
         <p class="card-text"><span class="fw-bold">Precio:</span> {{profesor?.precio}}</p>
         <p class="card-text"><span class="fw-bold">Asignaturas:</span></p>
