Añadimos los menús para profesores al header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,9 +12,13 @@
                         [routerLink]="['/home']">Inicio</a>
                     <a *ngIf="rolAdmin" class="nav-link" routerLinkActive="active"
                         [routerLink]="['/dashboard/admin']">Dashboard</a>
+                    <a *ngIf="rolProfe" class="nav-link" routerLinkActive="active"
+                        [routerLink]="['/dashboard/profe']">Dashboard</a>
+                    <a *ngIf="rolProfe" class="nav-link" routerLinkActive="active"
+                        [routerLink]="['/dashboard/profe/perfil']">Perfil</a>
                     <a *ngIf="!logado" class="nav-link" routerLinkActive="active"
                         [routerLink]="['/registro']">Registro</a>
-                    <a *ngIf="!logado" class="btn btn-outline-success" routerLinkActive="active"
+                    <a *ngIf="!logado" class="btn btn-outline-success m-1" routerLinkActive="active"
                         [routerLink]="['/login']"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                             fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
                             <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" />
