Cambiamos nombre de componente de registro a formulario, añadimos perfil de profesor a routing y a header

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,8 +14,8 @@
                         [routerLink]="['/dashboard/admin']">Dashboard</a>
                     <a *ngIf="rolProfe" class="nav-link" routerLinkActive="active"
                         [routerLink]="['/dashboard/profe']">Dashboard</a>
-                    <a *ngIf="rolProfe" class="nav-link" routerLinkActive="active"
-                        [routerLink]="['/dashboard/profe/perfil']">Perfil</a>
+                    <!--<a *ngIf="rolProfe" class="nav-link" routerLinkActive="active"
+                        [routerLink]="['/dashboard/profe/perfil']">Perfil</a>-->
                     <a *ngIf="!logado" class="nav-link" routerLinkActive="active"
                         [routerLink]="['/registro']">Registro</a>
                     <a *ngIf="!logado" class="btn btn-outline-success m-1" routerLinkActive="active"
