Creamos el componente profe-dashboard y cargamoa el componente perfil, cambios en componente perfil

--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -15,7 +15,8 @@
             </div>
 
             <div class="list-boton" *ngIf="rolUsuario !== 'admin'">
-                <a [routerLink]="['/dashboard/', rolUsuario]"><i class="bi bi-pencil-square activado"
+                <!-- boton modificar informacion -->
+                <a [routerLink]="['/dashboard/', rolUsuario,'actualizar']"><i class="bi bi-pencil-square activado"
                         alt="Modificar"></i></a>
             </div>
 
